--- a/io/espruino/led/index.html
+++ b/io/espruino/led/index.html
@@ -83,10 +83,12 @@
       </div>
 
       <h2>Blink</h2>
+      <p>Controls LED1</p>
       <button id="btnBlinkStart">Start</button>
       <button id="btnBlinkStop">Stop</button>
 
       <h2>Pulse-width modulation</h2>
+      <p>Controls LED2</p>
       <input id="rangePwm" type="range" min="0" max="100">
     </div>
     <script type="module" src="script.js"></script>
