--- a/io/wled/manual/index.html
+++ b/io/wled/manual/index.html
@@ -49,6 +49,7 @@
     <button id="btnTest1">1</button>
     <button id="btnTest2">2</button>
     <button id="btnTest3">3</button>
+    <button id="btnTest4">4</button>
 
   </section>
 </body>
