Add modulation/jitter example

--- a/modulation/easing-tick/index.html
+++ b/modulation/easing-tick/index.html
@@ -54,7 +54,7 @@
 </style>
 
 <body>
-  <h1>Tap circle to progress easing</h1>
+  <h1>Tap to progress</h1>
   <div id="thing"></div>
   <script type="module" src="script.js"></script>
 </body>
