--- a/modulation/index.html
+++ b/modulation/index.html
@@ -241,6 +241,13 @@
             <li>
               <a
                 class="source"
+                href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/jitter"
+              ></a>
+              <a href="./jitter/">jitter</a>: Apply randomness
+            </li>
+            <li>
+              <a
+                class="source"
                 href="https://github.com/ClintH/ixfx-demos/tree/main/modulation/per-second"
               ></a>
               <a href="./per-second/">per-second</a>: Modulating things based on clock-time
